# django_fett

./: README.md  pyproject.toml
django_fett/: asgi.py  settings.py  urls.py  wsgi.py
sw_people/: apps.py  forms.py  models.py  services.py  utils.py  views.py
sw_people/migrations/: 0001_initial.py
sw_people/static/css/: index.css
sw_people/templates/: file.html  header.html  header_toggles.html  index.html
